samples/_failures_safe/1761670053_af6c7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01c3a763.c: In function ‘main’:
./samples/SAFE/__tmp_01c3a763.c:155:5: error: expected declaration or statement at end of input
  155 |     int choice;
      |     ^~~
